# HolySee

./: Makefile  TODO.md  input.txt  lol.nasm  main.asm
asm/: lol.nasm  main.nasm
backend/: CMakeLists.txt  Makefile  backend.hpp  ir.cpp  ir.hpp  json2ir.cpp  json2ir.hpp  lol  main.cpp  milestones.md  test_pass.cpp  test_pass.hpp
backend/cli/: cli.cpp  cli.hpp
backend/codegen/: machine.hpp
backend/codegen/emit/: mctx.cpp  mctx.hpp  mfactory.hpp
backend/codegen/mir/: mcontrol.hpp  minstrs.hpp  mvalue.hpp  placement.cpp  placement.hpp
backend/codegen/x86/: minstrs.hpp
backend/demo/: Makefile  hello.nasm
backend/ir/: fn.hpp  ir.cpp  ir.hpp  program.hpp  value.hpp
backend/ir/blocks/: bblock.hpp  bbuilder.hpp
backend/ir/factory/: ifactory.hpp
backend/ir/instructions/: binary.cpp  binary.hpp  instruction.hpp  unary.hpp  vararg.hpp
backend/ir/json/: jsontranslator.cpp  jsontranslator.hpp
backend/ir/pass/: pass.hpp  pass_manager.cpp  pass_manager.hpp
backend/ir/program/: block.cpp  block.hpp  fn.cpp  fn.hpp  instr.cpp  instr.hpp  program.cpp  program.hpp  value.hpp
backend/ir/streamers/: iostreamer.cpp  iostreamer.hpp
backend/ir/try/: bblock.hpp  bbuilder.hpp  binary.cpp  fn.hpp  fnbuilder.hpp  ifactory.hpp  instruction.hpp  jsontranslator.cpp  jsontranslator.hpp  program.hpp  unary.hpp  value.hpp  vararg.hpp  vfactory.hpp
backend/ir/try/blocks/: bblock.hpp  bbuilder.hpp
backend/ir/try/factory/: ifactory.hpp  vfactory.hpp
backend/ir/try/instructions/: binary.cpp  binary.hpp  instruction.hpp  unary.hpp  vararg.hpp
backend/ir/try/json/: json_translator.hpp
backend/ir/try/streamers/: iostreamer.cpp  iostreamer.hpp
backend/ir/types/: itype.cpp  itype.hpp  vtype.cpp  vtype.hpp
backend/ir_gen/: ir_translator.hpp  json2ir.cpp  json2ir.hpp  json_translate.cpp  json_translate.hpp
backend/ir_gen/json/: json_translator.cpp  json_translator.hpp
backend/json/: json2ir.cpp  json2ir.hpp
backend/opt/: tdce.cpp  tdce.hpp
frontend/: .clang-format  Makefile  \  input.txt  lexer.cc  lexer.h  lexer_tests.cc  lexing.cc  meson.build  token.h
frontend/Frontend/src/: lexer.cpp  lexer.hpp  parser.cpp  parser.hpp
frontend/include/: ast.h  lexicon.h  lexing.h  parsing.h  token.h
frontend/include/ast/: decl.h  node.h  print.h  type.h
frontend/src/: ast.cc  lexicon.cc  lexing.cc  main.cpp  meson.build
frontend/src/ast/: print.cc
frontend/src/ast_translator/: translator.cpp  translator.hpp
frontend/src/driver/: driver.cpp
frontend/src/lang/: ast.cpp  ast.hpp  ast_visitor.hpp
frontend/src/lexer/: ilexer.hpp  lexer.cpp
frontend/src/parser/: iparser.hpp  parser.cpp  parser.hpp
frontend/test/: meson.build  parser_printer.cc  parsing.cc  posilkaNaDonbass.hpp
frontend/test/samples/: .gitignore  01-expected.txt  01-input.txt  Makefile  test.sh
runtime/Runtime/: .clang-format  CMakeLists.txt  Makefile  main.asm
runtime/Runtime/src/: CMakeLists.txt  Makefile  Runtime.cpp  Runtime.hpp  cmake_install.cmake
runtime/Runtime/src/memory/: Allocator.cpp  Allocator.hpp  GarbageCollector.cpp  GarbageCollector.hpp  MemoryManager.cpp  MemoryManager.hpp  ThreadSafeVector.cpp  ThreadSafeVector.hpp
runtime/Runtime/src/memory/alloca/: Allocator.cpp  Allocator.hpp  Arena.cpp  Arena.hpp  BitMap.cpp  BitMap.hpp  Bitset.cpp  Bitset.hpp  Region.cpp  Region.hpp
runtime/Runtime/src/memory/alloca/heap/: Heap.cpp  Heap.hpp
runtime/Runtime/src/safepoints/: Safepoint.cpp  Safepoint.hpp
runtime/Runtime/src/system/: System.cpp  System.hpp
runtime/Runtime/src/threads/: Horoutine.cpp  Horoutine.hpp  ThreadSafeCounter.cpp  ThreadSafeCounter.hpp  Threads.cpp  Threads.hpp
runtime/Runtime/src/utils/: FuckTBB.cpp  FuckTBB.hpp  FuckTBBnBOOST.cpp  defines.h  log.h
src/: .gitignore  main.cpp
src/ast_translator/: translator.cpp  translator.hpp
src/driver/: driver.cpp  driver.hpp
src/lang/: ast.cpp  ast.hpp  ast_visitor.hpp
src/lexer/: ilexer.hpp  lexer.cpp
src/parser/: parser.cpp  parser.hpp
